--- a/.github/workflows/deployment1.yml
+++ b/.github/workflows/deployment1.yml
@@ -13,7 +13,7 @@ jobs:
             - name: Use Node.js 20.16.0.x
               uses: actions/setup-node@v2
               with:
-                  node-version: 20.16.0.x
+                  node-version: 20.16.0
                   cache: "npm"
                   cache-dependency-path: package-lock.json
             - name: Install dependencies
